[tool.poetry]
name = "NINA"
version = "0.1.0a"
description = "This is a project that provides both a place for people to seek information about their favorite dolls. It just happens to also have a Battle Royale Simulation Utility."
license = "EPL-2.0"
authors = ["Tech. TTGames <50541739+Tech-TTGames@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/Tech-TTGames/NINA"
packages = [
    {include = "NINA"}
]

[tool.poetry.scripts]
start = "NINA.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"
discord-py = "^2.3.2"
aiohttp = {extras = ["speedups"], version = "^3.11.10"}
pillow = "^11.1.0"
text-to-owo = "^2.0.1"
tomli-w = { version = "^1.2.0", optional = true }
beautifulsoup4 = { version = "^4.12.3", optional = true }
selenium = {version = "^4.28.1", optional = true}
lxml = {version = "^5.3.1", optional = true}
mkdocs-material = "^9.6.3"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocs-git-committers-plugin-2 = "^2.4.1"
mkdocs-awesome-pages-plugin = "^2.10.1"
cairosvg = "^2.7.1"
markdown-grid-tables = "^0.4.0"
mkdocs-glightbox = "^0.4.0"
mkdocs-ezlinked-plugin = "^0.3.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
yapf = "^0.43.0"

[tool.poetry.extras]
brentutils = ["tomli-w", "beautifulsoup4", "selenium", "lxml"]

[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.isort]
profile = "google"
lines_between_types = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
